--- a/nagp-devops-us/nagp-devops-us.csproj
+++ b/nagp-devops-us/nagp-devops-us.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>nagp_devops_us</RootNamespace>
+    <UserSecretsId>8c25af89-86ac-4186-8e54-da4fa4c2e7e2</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+  </ItemGroup>
 
 </Project>
