--- a/K8s/Service.yaml
+++ b/K8s/Service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nagpapp-service
+  namespace: kubernetes-cluster-shailendrasharma
   labels: 
     service: nodeport
 spec:  
