--- a/K8s/ConfigMap.yaml
+++ b/K8s/ConfigMap.yaml
@@ -2,6 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: shailendra-configmap
+   namespace: kubernetes-cluster-shailendrasharma
 data:
 # Configuration Values are stored as key-value pairs
   dotNetEnv: "Kubernetessss"
