--- a/K8s/Namespace.yaml
+++ b/K8s/Namespace.yaml
@@ -2,3 +2,4 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kubernetes-cluster-shailendrasharma
+  namespace: kubernetes-cluster-shailendrasharma
