--- a/K8s/Deployment.yaml
+++ b/K8s/Deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: shailendra-nagpapp-container-m
-        image: shailu0287/app_shailendrasharma:latest
+        image: shailu0287/app_shailendrasharma:40
         ports:
           - containerPort: 80
             protocol: TCP
@@ -24,14 +24,6 @@ spec:
               configMapKeyRef: 
                 name: shailendra-configmap
                 key: dotNetEnv
-        volumeMounts:
-          - name: secrets
-            mountPath: /app/secrets
-            readOnly: true
-      volumes:
-      - name: secrets
-        secret:
-          secretName: secret-appsettings
               
   replicas: 1
   selector:
