--- a/K8s/Deployment.yaml
+++ b/K8s/Deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: shailendra-nagpapp-container-m
-        image: shailu0287/app_shailendrasharma:i-shailendrasharma-develop:latest
+        image: shailu0287/app_shailendrasharma:latest
         ports:
           - containerPort: 80
             protocol: TCP
